--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,56 @@
 /* Color Codes class */
-.colorb {color: Black;}
-.color0 {color: #C4C4C4;}       /* WHITE */
-.color1 {color: #B04434;}       /* RED */
-.color2 {color: #18FC00;}       /* SET */
-.color3 {color: #787CE7;}       /* MAGIC */
-.color4 {color: #948064;}       /* UNIQUE */
-.color5 {color: #505050;}       /* DARK GRAY */
-.color6 {color: WhiteSmoke;}
-.color7 {color: WhiteSmoke;}
-.color8 {color: #D08420;}       /* CRAFT */
-.color9 {color: #D8B864;}       /* RARE */
+.colorb {
+    color: Black;
+}
+
+.color0 {
+    color: #C4C4C4;
+}
+
+/* WHITE */
+.color1 {
+    color: #B04434;
+}
+
+/* RED */
+.color2 {
+    color: #18FC00;
+}
+
+/* SET */
+.color3 {
+    color: #787CE7;
+}
+
+/* MAGIC */
+.color4 {
+    color: #948064;
+}
+
+/* UNIQUE */
+.color5 {
+    color: #505050;
+}
+
+/* DARK GRAY */
+.color6 {
+    color: WhiteSmoke;
+}
+
+.color7 {
+    color: WhiteSmoke;
+}
+
+.color8 {
+    color: #D08420;
+}
+
+/* CRAFT */
+.color9 {
+    color: #D8B864;
+}
+
+/* RARE */
 
 .ld-select-add {
     width: 100% !important;
@@ -36,7 +77,7 @@
     max-width: 40px !important;
 }
 
-.ld-modal-col1 {  
+.ld-modal-col1 {
     max-width: 80px !important;
 }
 
@@ -64,80 +105,72 @@ td {
     opacity: 0.8 !important;
 }
 
-@media (max-width: 992px){
-    .row{
-        flex-direction: column-reverse; /*column & reverse*/
-    } 
+@media (max-width: 992px) {
+    .row {
+        flex-direction: column-reverse;
+        /*column & reverse*/
+    }
 }
 
-.comment-widgets .comment-row:hover, .comment-widgets .comment-row.active {
+.comment-widgets .comment-row:hover,
+.comment-widgets .comment-row.active {
     background: #141619;
-    color:white;
+    color: white;
 }
 
 .comment-widgets .comment-row.selected {
-    background: #1f262d70;;
-    color:white;
+    background: #1f262d70;
+    ;
+    color: white;
 }
 
 .comment-widgets .comment-row.hidden {
-	visibility: hidden;
+    visibility: hidden;
 }
 
-.comment-widgets{
+.comment-widgets {
     font-size: 10px;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .grp-btn {
-    align-self:center;
-    position:relative;
+    align-self: center;
+    position: relative;
     cursor: pointer;
-    left: -50px; }
+    left: -50px;
+}
 
 .form-filter-element {
-  display: inline-flex;
-  min-width: 280px;
-  justify-content: flex-start;
+    display: inline-flex;
+    min-width: 280px;
+    justify-content: flex-start;
 }
 
 .form-filter-label {
-  align-self: center;
-  padding-right: 10px;
-  margin-bottom: 4px;
-  min-width: 100px;
-  text-align: right;
-  font-size: 0.75rem;
+    align-self: center;
+    padding-right: 10px;
+    margin-bottom: 4px;
+    min-width: 100px;
+    text-align: right;
+    font-size: 0.75rem;
 }
 
 .form-filter {
-  margin-right: 18px;
-  align-self: center;
-  width: 100% !important;
-  margin-bottom: 4px;
-  font-size: 0.75rem;
+    margin-right: 18px;
+    align-self: center;
+    width: 100% !important;
+    margin-bottom: 4px;
+    font-size: 0.75rem;
 }
-.form-filter-input { 
-  width:100%;
-  background-color: #F622178f;
+
+.form-filter-input {
+    width: 100%;
+    background-color: #F622178f;
 }
+
 .form-filter-input.valid {
-  width:100%;
-  background-color: #57E96488;
-}
-
-.item-menu  {
-  display: none;
-  position: absolute;
-  min-width: 132px;
-  font-size: 12px;
-  background-color: #f1f1f1;
-  z-index: 1;
-}
-
-.item-menu .select {
-	border-radius: 0px;
-    border-color: rgb(169, 169, 169);
+    width: 100%;
+    background-color: #57E96488;
 }
 
 .card {
@@ -163,8 +196,7 @@ td {
     image-rendering: crisp-edges;
 }
 
-.current-user-btn
-{
+.current-user-btn {
     padding-right: 23px;
     font-size: 22px;
 }
@@ -239,7 +271,7 @@ td {
     display: inline-block;
     width: 132px;
     height: 23px;
-    text-align: left;    
+    text-align: left;
 }
 
 .ld-select {
@@ -249,16 +281,64 @@ td {
 }
 
 .ld-loader {
-  border: 10px solid #53a53a;
-  border-top: 18px solid #191919;
-  border-bottom: 3px solid #191919;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  animation: spin 1s linear infinite;
+    border: 10px solid #53a53a;
+    border-top: 18px solid #191919;
+    border-bottom: 3px solid #191919;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.styled-item-menu {
+    display: none;
+}
+
+.styled-item-menu input {
+    padding: 5px;
+    font-size: 15px;
+    border: none;
+    color: #18FC00;
+    background-color: transparent;
+    align-items: center;
+    margin: auto;
+}
+
+.styled-item-menu select {
+    border: none;
+    color: white;
+    background-color: #505050;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.styled-item-menu select::-webkit-scrollbar {
+    width: 5px;
+    background-color: #505050;
+    border-radius: 20px;
+}
+
+.styled-item-menu select::-webkit-scrollbar-thumb {
+    width: 5px;
+    background-color: #11c501;
+    border-radius: 20px;
+}
+
+.styled-counter h6 {
+    font-size: 15px;
+    border: none;
+    color: white;
+    background-color: transparent;
+    align-items: center;
+    margin: auto;
 }
