Major Styling changes to: Searchbox, Search menu

--- a/css/style.css
+++ b/css/style.css
@@ -2581,8 +2581,8 @@ pre code {
   width: 100%;
   font-size: 0.875rem;
   line-height: 1.5;
-  background-color: #191919;
-  color: #18fc00;
+  background-color: #292929;
+  color: #15b403;
   background-clip: padding-box;
   -webkit-transition: border-color 0.15s ease-in-out,
     -webkit-box-shadow 0.15s ease-in-out;
@@ -2605,8 +2605,8 @@ pre code {
   border: 0;
 }
 .form-control:focus {
-  background-color: #191919;
-  color: #18fc00;
+  background-color: #292929;
+  color: #15b403;
   border-color: rgba(0, 0, 0, 0.25);
   outline: 0;
   -webkit-box-shadow: transparent;
@@ -2630,8 +2630,8 @@ pre code {
 }
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #191919;
-  color: #18fc00;
+  background-color: #292929;
+  color: #15b403;
   opacity: 1;
 }
 
