--- a/css/custom.css
+++ b/css/custom.css
@@ -147,7 +147,7 @@ td {
 
 .form-filter-label {
   align-self: center;
-  padding-right: 10px;
+  padding-right: 5px;
   margin-bottom: 4px;
   min-width: 100px;
   text-align: right;
@@ -163,15 +163,17 @@ td {
 }
 
 .form-filter-input {
-  width: 100%;
-  background-color: #f622178f;
+  width: 40%;
+  border: #af0000 2px solid;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .form-filter-input.valid {
-  width: 30%;
+  width: 40%;
   border: #11c501 2px solid;
   border-radius: 10px;
-  padding-left: 5px;
+  text-align: center;
 }
 
 .card {
@@ -314,7 +316,7 @@ td {
   padding: 5px;
   font-size: 15px;
   border: none;
-  color: #18fc00;
+  color: #15b403;
   background-color: transparent;
   align-items: center;
   margin: auto;
@@ -324,6 +326,16 @@ td {
   border: none;
   align-content: center;
   color: white;
+  width: 100%;
+  padding: 5px;
+  background-color: #505050;
+  border-radius: 5px;
+  margin: auto;
+}
+.styled-item-menu select:focus:se {
+  border: none;
+  align-content: center;
+  color: rgb(199, 0, 0);
   width: 100%;
   padding: 5px;
   background-color: #505050;
@@ -349,7 +361,18 @@ td {
   display: block;
   border: none;
   padding-left: -10px;
-  color: rgb(4, 253, 24);
+  color: #19cc05;
+  background-color: transparent;
+  margin: 0px;
+}
+
+.styled-counter:hover{
+  font-size: 12px;
+  font-family: inherit;
+  display: block;
+  border: none;
+  padding-left: -10px;
+  color: #1aff00;
   background-color: transparent;
   margin: 0px;
 }
@@ -412,21 +435,32 @@ h6.drop-queue-styled {
 
 .app-search {
   background-color: #292929;
-  color: #18fc00;
+  color: #15b403;
 }
 
 .app-search :focus {
   background-color: #292929;
-  color: #18fc00;
+  color: #15b403;
 }
 
 .app-search input {
   background-color: #292929;
-  color: #18fc00;
+  color: #15b403;
 }
 
 .form-control div {
   list-style: inside;
   background-color: #292929;
-  color: #18fc00;
+  color: #15b403;
+}
+
+.styled-search-menu {
+  position: fixed;
+  top: 10px;
+  padding: 5px;
+  right: 10px;
+  z-index: 1060;
+  display: block;
+  max-width: 300px;
+  background-color: #292929;
 }
