--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ body {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #3e5569;
+  color: #292929;
   text-align: left;
   background-color: #eef5f9;
 }
@@ -2679,7 +2679,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.5;
-  color: #3e5569;
+  color: #292929;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -4089,7 +4089,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 0.875rem;
-  color: #3e5569;
+  color: #292929;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -6275,7 +6275,7 @@ input[type="button"].btn-block {
   background-color: #f8f9fa;
 }
 .list-group-item-action:active {
-  color: #3e5569;
+  color: #292929;
   background-color: #e9ecef;
 }
 
@@ -6980,7 +6980,7 @@ button.close {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #3e5569;
+  color: #292929;
 }
 
 .carousel {
@@ -10313,7 +10313,7 @@ a.text-purple:focus {
 }
 
 .text-body {
-  color: #3e5569 !important;
+  color: #292929 !important;
 }
 
 .text-muted {
@@ -10848,7 +10848,7 @@ html[dir="ltr"] body .p-l-0 {
   .top-navbar
   .navbar-header[data-logobg="skin6"]
   .topbartoggler {
-  color: #3e5569;
+  color: #292929;
 }
 #main-wrapper[data-layout="vertical"]
   .topbar
@@ -10898,7 +10898,7 @@ html[dir="ltr"] body .p-l-0 {
   .topbar
   .navbar-collapse[data-navbarbg="skin5"],
 #main-wrapper[data-layout="horizontal"] .topbar[data-navbarbg="skin5"] {
-  background: #414755;
+  background: #292929;
 }
 #main-wrapper[data-layout="vertical"]
   .topbar
@@ -11438,7 +11438,7 @@ html[dir="ltr"] body .p-l-0 {
 body {
   margin: 0;
   overflow-x: hidden;
-  color: #3e5569;
+  color: #292929;
   background: #fff;
 }
 
@@ -11457,7 +11457,7 @@ a:focus {
 }
 
 a.link {
-  color: #3e5569;
+  color: #292929;
 }
 a.link:hover,
 a.link:focus {
@@ -11700,7 +11700,7 @@ ul.list-style-none li {
   list-style: none;
 }
 ul.list-style-none li a {
-  color: #3e5569;
+  color: #292929;
   padding: 8px 0px;
   display: block;
   text-decoration: none;
@@ -12824,7 +12824,7 @@ customizer
 }
 .customizer .customizer-tab .nav-item .nav-link {
   padding: 15px 12px;
-  color: #3e5569;
+  color: #292929;
   border-bottom: 3px solid transparent;
 }
 .customizer .customizer-tab .nav-item .nav-link:hover,
@@ -16325,7 +16325,7 @@ body .jqstooltip {
 .select2-container--default .select2-selection--multiple {
   border-color: #e9ecef;
   height: 40px;
-  color: #3e5569;
+  color: #292929;
   line-height: 40px;
 }
 
@@ -17698,7 +17698,7 @@ Earnings
 .email-app .list-group .list-group-item .list-group-item-action {
   padding: 12px 15px;
   display: block;
-  color: #3e5569;
+  color: #292929;
 }
 .email-app .list-group .list-group-item .list-group-item-action .mdi {
   font-size: 18px;
@@ -18794,7 +18794,7 @@ File: scss
 .mailbox .nav-link {
   border-top: 1px solid #e9ecef;
   padding-top: 15px;
-  color: #3e5569;
+  color: #292929;
 }
 
 .mailbox .message-center {
@@ -19083,7 +19083,7 @@ File: scss
 }
 .chat-windows .user-chat .chat-footer .form-control {
   background-color: transparent;
-  color: #3e5569;
+  color: #292929;
   font-size: 14px;
   border: 0px;
   width: 100%;
