--- a/css/custom.css
+++ b/css/custom.css
@@ -90,7 +90,7 @@
 }
 
 #main-wrapper .page-wrapper .container-fluid {
-  height: calc(100vh - 94px);
+  height: calc(100vh - 94px + 30px);
   overflow-y: scroll;
 }
 
@@ -479,4 +479,34 @@ h6.drop-queue-styled {
 
 .side-nav {
   background-color: #292929;
+}
+
+.custom-footer {
+  position: fixed;
+  display: inline-flex;
+  height: 30px;
+  bottom: 10px;
+  right: 2%;
+  color: #0b8300;
+  cursor: pointer;
+}
+.custom-footer h6 {
+  visibility: hidden;
+  padding-left: 5px;
+}
+.custom-footer:hover {
+  color: #17d406;
+}
+.custom-footer a {
+  color: #17d406;
+}
+.custom-footer:hover a {
+  color: #17d406;
+}
+.custom-footer:hover h6 {
+  margin: 0px !important;
+  display: inline-flex;
+  align-self: center;
+  visibility: visible;
+  color: #17d406;
 }
