--- a/css/custom.css
+++ b/css/custom.css
@@ -544,7 +544,7 @@ h6.drop-queue-styled {
 }
 /* Mobile media querys Rev patches, such an awfull way to make things. */
 
-@media (max-width: 560px) {
+@media (max-width: 500px) {
   .page-wrapper .container-fluid {
     padding: 0px !important;
   }
@@ -579,7 +579,7 @@ h6.drop-queue-styled {
   margin: 5px;
   align-self: center;
   font-size: large;
-  color: #11c501;
+  color: #f3f3f3;
   border: none;
   border-bottom: 3px solid transparent;
 }
@@ -587,6 +587,6 @@ h6.drop-queue-styled {
 .rev-set-menu button:hover,
 .rev-set-menu button:focus {
   outline: none;
-  letter-spacing: 1px;
+  color: #11c501;
   border-bottom: #11c501 3px solid;
 }
